--- a/result/2022-01-07.md
+++ b/result/2022-01-07.md
@@ -35,11 +35,12 @@
 35. [歼20歼16异型机空战对抗](https://s.weibo.com//weibo?q=%23%E6%AD%BC20%E6%AD%BC16%E5%BC%82%E5%9E%8B%E6%9C%BA%E7%A9%BA%E6%88%98%E5%AF%B9%E6%8A%97%23&Refer=top) 204939
 36. [急得都会叫妈妈了](https://s.weibo.com//weibo?q=%23%E6%80%A5%E5%BE%97%E9%83%BD%E4%BC%9A%E5%8F%AB%E5%A6%88%E5%A6%88%E4%BA%86%23&Refer=top) 181994
 37. [淘宝天猫全面融合](https://s.weibo.com//weibo?q=%23%E6%B7%98%E5%AE%9D%E5%A4%A9%E7%8C%AB%E5%85%A8%E9%9D%A2%E8%9E%8D%E5%90%88%23&Refer=top) 174149
-38. [音乐平台不得签署独家版权协议](https://s.weibo.com//weibo?q=%23%E9%9F%B3%E4%B9%90%E5%B9%B3%E5%8F%B0%E4%B8%8D%E5%BE%97%E7%AD%BE%E7%BD%B2%E7%8B%AC%E5%AE%B6%E7%89%88%E6%9D%83%E5%8D%8F%E8%AE%AE%23&Refer=top) 171934
-39. [河南人必能战胜疫情](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E4%BA%BA%E5%BF%85%E8%83%BD%E6%88%98%E8%83%9C%E7%96%AB%E6%83%85%23&Refer=top) 165072
-40. [当你打开妈妈的手机时](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BD%A0%E6%89%93%E5%BC%80%E5%A6%88%E5%A6%88%E7%9A%84%E6%89%8B%E6%9C%BA%E6%97%B6%23&Refer=top) 156100
-41. [银川向西安捐助羊肉枸杞等120吨](https://s.weibo.com//weibo?q=%23%E9%93%B6%E5%B7%9D%E5%90%91%E8%A5%BF%E5%AE%89%E6%8D%90%E5%8A%A9%E7%BE%8A%E8%82%89%E6%9E%B8%E6%9D%9E%E7%AD%89120%E5%90%A8%23&Refer=top) 145143
-42. [14岁男孩住医院阳台7年陪护瘫痪父亲](https://s.weibo.com//weibo?q=%2314%E5%B2%81%E7%94%B7%E5%AD%A9%E4%BD%8F%E5%8C%BB%E9%99%A2%E9%98%B3%E5%8F%B07%E5%B9%B4%E9%99%AA%E6%8A%A4%E7%98%AB%E7%97%AA%E7%88%B6%E4%BA%B2%23&Refer=top) 141984
-43. [河南推迟高中学生学业水平考试](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E6%8E%A8%E8%BF%9F%E9%AB%98%E4%B8%AD%E5%AD%A6%E7%94%9F%E5%AD%A6%E4%B8%9A%E6%B0%B4%E5%B9%B3%E8%80%83%E8%AF%95%23&Refer=top) 141957
-44. [经济独立的女性都做啥工作](https://s.weibo.com//weibo?q=%23%E7%BB%8F%E6%B5%8E%E7%8B%AC%E7%AB%8B%E7%9A%84%E5%A5%B3%E6%80%A7%E9%83%BD%E5%81%9A%E5%95%A5%E5%B7%A5%E4%BD%9C%23&Refer=top) 140713
+38. [14岁男孩住医院阳台7年陪护瘫痪父亲](https://s.weibo.com//weibo?q=%2314%E5%B2%81%E7%94%B7%E5%AD%A9%E4%BD%8F%E5%8C%BB%E9%99%A2%E9%98%B3%E5%8F%B07%E5%B9%B4%E9%99%AA%E6%8A%A4%E7%98%AB%E7%97%AA%E7%88%B6%E4%BA%B2%23&Refer=top) 173361
+39. [音乐平台不得签署独家版权协议](https://s.weibo.com//weibo?q=%23%E9%9F%B3%E4%B9%90%E5%B9%B3%E5%8F%B0%E4%B8%8D%E5%BE%97%E7%AD%BE%E7%BD%B2%E7%8B%AC%E5%AE%B6%E7%89%88%E6%9D%83%E5%8D%8F%E8%AE%AE%23&Refer=top) 171934
+40. [经济独立的女性都做啥工作](https://s.weibo.com//weibo?q=%23%E7%BB%8F%E6%B5%8E%E7%8B%AC%E7%AB%8B%E7%9A%84%E5%A5%B3%E6%80%A7%E9%83%BD%E5%81%9A%E5%95%A5%E5%B7%A5%E4%BD%9C%23&Refer=top) 167666
+41. [河南人必能战胜疫情](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E4%BA%BA%E5%BF%85%E8%83%BD%E6%88%98%E8%83%9C%E7%96%AB%E6%83%85%23&Refer=top) 165072
+42. [当你打开妈妈的手机时](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BD%A0%E6%89%93%E5%BC%80%E5%A6%88%E5%A6%88%E7%9A%84%E6%89%8B%E6%9C%BA%E6%97%B6%23&Refer=top) 156100
+43. [银川向西安捐助羊肉枸杞等120吨](https://s.weibo.com//weibo?q=%23%E9%93%B6%E5%B7%9D%E5%90%91%E8%A5%BF%E5%AE%89%E6%8D%90%E5%8A%A9%E7%BE%8A%E8%82%89%E6%9E%B8%E6%9D%9E%E7%AD%89120%E5%90%A8%23&Refer=top) 145143
+44. [河南推迟高中学生学业水平考试](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E6%8E%A8%E8%BF%9F%E9%AB%98%E4%B8%AD%E5%AD%A6%E7%94%9F%E5%AD%A6%E4%B8%9A%E6%B0%B4%E5%B9%B3%E8%80%83%E8%AF%95%23&Refer=top) 141957
 45. [光遇](https://s.weibo.com//weibo?q=%E5%85%89%E9%81%87&Refer=top) 137412
+46. [3岁娃被锁共享租车柜哇哇大哭](https://s.weibo.com//weibo?q=%233%E5%B2%81%E5%A8%83%E8%A2%AB%E9%94%81%E5%85%B1%E4%BA%AB%E7%A7%9F%E8%BD%A6%E6%9F%9C%E5%93%87%E5%93%87%E5%A4%A7%E5%93%AD%23&Refer=top) 52776
